# iceberg-catalog-bench

./: .gitignore  ICEBERG-Interoperability-Test-Spec.md  README.md  snowflake.sql
blob_dfs/: README.md  blob-dfs_bench.py
dam-automation/: README.md  pyproject.toml
dam-automation/config/: example-config.yaml
dam-automation/src/dam_automation/: __init__.py  auth.py  azure.py  config.py  databricks.py  http.py  identity.py  main.py  models.py  service.py  snowflake.py  state.py  workflow.py
dam-automation/state/: ds1.json
dam-automation/tests/: test_auth.py  test_azure.py  test_config.py  test_databricks.py  test_databricks_utils.py  test_http.py  test_identity.py  test_main_cli.py  test_models.py  test_service_utils.py  test_snowflake_utils.py  test_state.py  test_state_serialization.py  test_workflow.py
iceberg-tests/: README.md  env.example  orchestrator.py  requirements.txt
iceberg-tests/config/: datasets.yaml  engines.yaml  framework.yaml
iceberg-tests/framework/: __init__.py  cli.py  config.py  runner.py  sql.py  validators.py
iceberg-tests/framework/engines/: __init__.py  base.py  databricks.py  snowflake.py  spark.py
iceberg-tests/scripts/common/: data_gen.py
iceberg-tests/scripts/databricks/: read_validate.py
iceberg-tests/scripts/snowflake/: read_validate.py  run_sql.py
jupyternotebook/: opensnowflake.ipynb  openspark.ipynb  unityspark.ipynb
opencatalog/: README.md
opencatalog/samples/: table_create_template.json  table_metrics_template.json  view_create_template.json
opencatalog/scripts/: opencatalog_api_tester.py
(+33 files in other folders)
